# fastapi-with-django-orm-template

./: .editorconfig  .env.example  .gitignore  README.md  makefile  manage.py  pyproject.toml  run.py
cliver/: main.py  settings.py
cliver/api/: __init__.py
cliver/api/routes/: auth.py
cliver/api/routes/admin/: __init__.py  users.py
cliver/core/: db.py  logger.py  security.py  sentry.py
cliver/core/middleware/: __init__.py  process.py
cliver/core/validators/: types.py  utils.py
cliver/dependencies/: auth.py
cliver/migrations/: 0001_initial.py
cliver/models/: __init__.py  user.py  user_profile.py
cliver/schemas/: auth.py  users.py
